# Data_Analysis_Sirius

./: README.md  control_open_loop_viz.py  data_fetcher_app.py  requirements.txt  torque_allocation_app.py
config/: bucket_config.py  config.py
config/bucket_configs/: ariane_config.py  sirius_config.py
data/amk/: amk_known_error_codes.json
data/sys_id/: adding.m  adding.prj  data_process_temp.ipynb  data_rpm_to_vel.ipynb  import_csv_data.m  linear_torque_full_processed.csv  step_sysid_FL.csv  step_sysid_FR.csv  step_sysid_RR.csv  step_torque_full_processed.csv  system_id.sid  toolchain_32bit.m
data/sys_id/codegen/dll/adding/: CMakeLists.txt  adding.bat  adding.c  adding.def  adding.h  adding_data.h  adding_initialize.c  adding_initialize.h  adding_terminate.c  adding_terminate.h  adding_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  rtw_proj.tmw  rtwtypes.h
data/sys_id/codegen/dll/adding/examples/: main.c  main.h
data/sys_id/codegen/dll/adding/export/: adding.cmake
data/sys_id/codegen/dll/adding/html/: report.mldatx
data/sys_id/codegen/dll/adding/interface/: _coder_adding_api.c  _coder_adding_api.h  _coder_adding_info.c  _coder_adding_info.h  _coder_adding_mex.c  _coder_adding_mex.h
data/test_description/: schedule.json
data/test_description/session_information/: 2024-04-20.json  2024-05-04.json  2024-07-25.json  2024-07-26.json  2024-07-27.json  2024-10-12.json  2024-11-17.json
notebooks/: TA_explicit.ipynb  answer_optimizer_app.py  answer_sequence_optimizer_app.py  explicit_qp.ipynb  quizz_answer_app.py  torque_optimizer_mtx.ipynb
src/backend/api_call/: base.py  influxdb_api.py
src/backend/create_extra_data/: create_new_data.py
src/backend/data_crud/: json_crud.py  json_session_info.py
src/backend/sessions/: create_sessions.py
src/backend/state_estimation/: state_estimator_app.py
src/backend/state_estimation/attitude_estimation/: attitude_estimation.py  attitude_estimation_az.py  attitude_estimation_simple.py  attitude_estimation_simple2.py  attitude_estimator_speed.py
src/backend/state_estimation/config/: state_estimation_param.py  vehicle_params.py
src/backend/state_estimation/kalman_filters/: EKF.py  MKF.py  UKF.py
src/backend/state_estimation/kalman_filters/estimation_transformation/: __init__.py  wheel_speed.py
src/backend/state_estimation/measurments/: sensors.py
src/backend/state_estimation/measurments/measurement_transformation/: __init__.py  steering_to_wheel_angle.py
src/backend/state_estimation/mu_estimation/: estimate_mu.py
src/backend/state_estimation/observe_measurments/: new_features_plots.py
src/backend/state_estimation/slip_angle_estimation/: slip_angle_estimator.py
src/backend/torque_vectoring/: config_tv.py  tv_reference.py
src/frontend/dialogue_boxes/: dialogue_box.py
src/frontend/plotting/: plotting.py
src/frontend/tabs/: __init__.py  fsm_state_tab.py  session_info_tab.py  tab1.py  tab10.py  tab11.py  tab12.py  tab13.py  tab14.py  tab15.py  tab16.py  tab17.py  tab18.py  tab2.py  tab3.py  tab4.py  tab5.py  tab6.py  tab7.py  tab8.py  tab9.py  telemetry_description_tab.py
